Basic html content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,110 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="sidebar">
+        <h1>Dashboard</h1>
+        <ul class="main-controls">
+            <li>Home</li>
+            <li>Profile</li>
+            <li>Messages</li>
+            <li>History</li>
+            <li>Tasks</li>
+            <li>Communities</li>
+        </ul>
+        <ul class="settings">
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+        </ul>
+    </div>
+    <div class="header">
+        <div class="header-top">
+            <input type="search">
+            <p>Slopen Boben</p>
+        </div>
+        <div class="header-bot">
+            <div class="hello">
+                <p>Hi there,</p>
+                <p>Slopen Boben (@slopbob)</p>
+            </div>
+            <div class="action-buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <div class="cards">
+            <p>Your projects</p>
+            <div>
+                <p>Top text</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
+            </div>
+            <div>
+                <p>Top text</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
+            </div>
+            <div>
+                <p>Top text</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
+            </div>
+            <div>
+                <p>Top text</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
+            </div>
+            <div>
+                <p>Top text</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
+            </div>
+            <div>
+                <p>Top text</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
+            </div>
+        </div>
+        <div class="content-side">
+            <div class="announce">
+                <p>Announcements</p>
+                <div>
+                    <p>Top text</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                </div>
+                <div>
+                    <p>Top text</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                </div>
+                <div>
+                    <p>Top text</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="trending">
+                <div>
+                    <div>
+                        <p>@tegan</p>
+                        <p>a dog</p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <p>@morgan</p>
+                        <p>freeman?</p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <p>@kendall</p>
+                        <p>cool app</p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <p>@alex</p>
+                        <p>not a steve</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
