--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     </div>
                 </div>
             </div>
+            <p>Your projects</p> <!-- kill me -->
             <div class="content">
                 <div class="cards">
-                    <p>Your projects</p>
                     <div>
                         <p>Top text</p>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
@@ -87,6 +87,7 @@
                         </div>
                     </div>
                     <div class="trending">
+                        <p>Trending</p>
                         <div>
                             <div>
                                 <p>@tegan</p>
