--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
                     </div>
                 </div>
             </div>
-            <p>Your projects</p> <!-- kill me -->
             <div class="content">
+                <p>Your projects</p> <!-- kill me -->
+                <p class="two">Announcements</p>
                 <div class="cards">
                     <div>
                         <p>Top text</p>
@@ -72,7 +73,6 @@
                 </div>
                 <div class="content-side">
                     <div class="announce">
-                        <p>Announcements</p>
                         <div>
                             <p>Top text</p>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
