--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 <body>
     <div class="wrapper">
         <div class="sidebar">
-            <h1>Dashboard</h1>
+            <div class="sidebar-logo">
+                <img src="./icons/hexagon-multiple.svg">
+                <h1>Dashboard</h1>
+            </div>
             <ul class="main-controls">
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
+                <li><img src="./icons/home-account.svg">Home</li>
+                <li><img src="./icons/card-account-details-outline.svg">Profile</li>
+                <li><img src="./icons/message.svg">Messages</li>
+                <li><img src="./icons/clock-time-three-outline.svg">History</li>
+                <li><img src="./icons/file-document-edit-outline.svg">Tasks</li>
+                <li><img src="./icons/account-group.svg">Communities</li>
             </ul>
             <ul class="settings">
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li><img src="./icons/cog.svg">Settings</li>
+                <li><img src="./icons/tooltip-question.svg">Support</li>
+                <li><img src="./icons/shield-key.svg">Privacy</li>
             </ul>
         </div>
         <div class="right-root"> <!-- why is this necessary? -->
