--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
         <div class="right-root"> <!-- why is this necessary? -->
             <div class="header">
                 <div class="header-top">
-                    <input type="search">
-                    <p>Slopen Boben</p>
+                    <div>
+                        <img src="./icons/magnify.svg">
+                        <input type="search">
+                    </div>
+                    <div>
+                        <img src="./icons/bell.svg">
+                        <p>Slopen Boben</p>
+                    </div>
                 </div>
                 <div class="header-bot">
                     <div class="hello">
