--- a/index.html
+++ b/index.html
@@ -36,13 +36,17 @@
                     </div>
                     <div>
                         <img src="./icons/bell.svg">
+                        <img src="#">
                         <p>Slopen Boben</p>
                     </div>
                 </div>
                 <div class="header-bot">
                     <div class="hello">
-                        <p>Hi there,</p>
-                        <p>Slopen Boben (@slopbob)</p>
+                        <img src="#">
+                        <div>
+                            <p>Hi there,</p>
+                            <p>Slopen Boben (@slopbob)</p>
+                        </div>
                     </div>
                     <div class="action-buttons">
                         <button>New</button>
