--- a/index.html
+++ b/index.html
@@ -62,26 +62,56 @@
                     <div>
                         <p>Top text</p>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
+                        <div>
+                            <img src="./icons/star-plus-outline.svg">
+                            <img src="./icons/eye-plus-outline.svg">
+                            <img src="./icons/source-fork.svg">
+                        </div>
                     </div>
                     <div>
                         <p>Top text</p>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
+                        <div>
+                            <img src="./icons/star-plus-outline.svg">
+                            <img src="./icons/eye-plus-outline.svg">
+                            <img src="./icons/source-fork.svg">
+                        </div>
                     </div>
                     <div>
                         <p>Top text</p>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
+                        <div>
+                            <img src="./icons/star-plus-outline.svg">
+                            <img src="./icons/eye-plus-outline.svg">
+                            <img src="./icons/source-fork.svg">
+                        </div>
                     </div>
                     <div>
                         <p>Top text</p>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
+                        <div>
+                            <img src="./icons/star-plus-outline.svg">
+                            <img src="./icons/eye-plus-outline.svg">
+                            <img src="./icons/source-fork.svg">
+                        </div>
                     </div>
                     <div>
                         <p>Top text</p>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
+                        <div>
+                            <img src="./icons/star-plus-outline.svg">
+                            <img src="./icons/eye-plus-outline.svg">
+                            <img src="./icons/source-fork.svg">
+                        </div>
                     </div>
                     <div>
                         <p>Top text</p>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur enim laboriosam molestiae repellendus quasi maxime corporis. Id quo recusandae aspernatur est dolore beatae sapiente iste repudiandae quisquam! Quia, quis laborum.</p>
+                        <div>
+                            <img src="./icons/star-plus-outline.svg">
+                            <img src="./icons/eye-plus-outline.svg">
+                            <img src="./icons/source-fork.svg">
+                        </div>
                     </div>
                 </div>
                 <div class="content-side">
@@ -90,10 +120,12 @@
                             <p>Top text</p>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                         </div>
+                        <span></span>
                         <div>
                             <p>Top text</p>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                         </div>
+                        <span></span>
                         <div>
                             <p>Top text</p>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -102,24 +134,28 @@
                     <div class="trending">
                         <p>Trending</p>
                         <div>
+                            <img src="#">
                             <div>
                                 <p>@tegan</p>
                                 <p>a dog</p>
                             </div>
                         </div>
                         <div>
+                            <img src="#">
                             <div>
                                 <p>@morgan</p>
                                 <p>freeman?</p>
                             </div>
                         </div>
                         <div>
+                            <img src="#">
                             <div>
                                 <p>@kendall</p>
                                 <p>cool app</p>
                             </div>
                         </div>
                         <div>
+                            <img src="#">
                             <div>
                                 <p>@alex</p>
                                 <p>not a steve</p>
